force-app/main/default/objects/ServiceTerritory/fields/Areacode__c.field-meta.xml
<CustomField>
    <fullName>Areacode__c</fullName>
    <externalId>true</externalId>
    <label>Area code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>