force-app/main/default/objects/ServiceTerritory/fields/CompanyCodeName__c.field-meta.xml
<CustomField>
    <fullName>CompanyCodeName__c</fullName>
    <label>CompanyCodeName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>