force-app/main/default/objects/ServiceTerritory/fields/GMT_Offset__c.field-meta.xml
<CustomField>
    <fullName>GMT_Offset__c</fullName>
    <label>GMT Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>