force-app/main/default/objects/ServiceTerritory/fields/Initial_Lock_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Lock_Date__c</fullName>
    <description>Use to set the Time and Day of the Week that the lock time should reference for every week. I.e. Tuesday at 9 am</description>
    <inlineHelpText>Set this date/time to identify which day of the week and time (in current time zone) the time entries should be locked. This will apply to the same day each week with the same time.</inlineHelpText>
    <label>Initial Lock Date</label>
    <type>DateTime</type>
</CustomField>