force-app/main/default/objects/ServiceTerritory/fields/Initial_Lock_Date_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Initial_Lock_Date_Mobile__c</fullName>
    <description>Jitin: created for story 24115</description>
    <label>Initial Lock Date Mobile</label>
    <type>DateTime</type>
</CustomField>