force-app/main/default/objects/ServiceTerritory/fields/Lock_Time__c.field-meta.xml
<CustomField>
    <fullName>Lock_Time__c</fullName>
    <description>Determines the lock time for the current week. Checks to see if there is an override for the current week. If not, finds the Day of the Week and Time from the Initial Lock Time field to set this week&apos;s lock time</description>
    <formula>IF(AND(ISOWEEK(DATEVALUE(Lock_Time_Override__c)) = ISOWEEK(TODAY()), YEAR(TODAY()) = YEAR(DATEVALUE(Lock_Time_Override__c))) , Lock_Time_Override__c,
IF(WEEKDAY(TODAY())&gt;WEEKDAY(DATEVALUE(Initial_Lock_Date__c)),
    Initial_Lock_Date__c +(TODAY()-DATEVALUE(Initial_Lock_Date__c)) + WEEKDAY(DATEVALUE(Initial_Lock_Date__c))-WEEKDAY(TODAY()),
IF(WEEKDAY(TODAY())=WEEKDAY(DATEVALUE(Initial_Lock_Date__c)),
				Initial_Lock_Date__c +(TODAY()-DATEVALUE(Initial_Lock_Date__c)),
Initial_Lock_Date__c +(TODAY()-DATEVALUE(Initial_Lock_Date__c)) + WEEKDAY(DATEVALUE(Initial_Lock_Date__c))-WEEKDAY(TODAY())
)	  
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock Time</label>
    <type>DateTime</type>
</CustomField>