force-app/main/default/objects/ServiceTerritory/fields/Lock_Time_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Lock_Time_Mobile__c</fullName>
    <description>Jitin: create for story: 24115</description>
    <formula>IF(WEEKDAY(TODAY())&gt;WEEKDAY(DATEVALUE(Initial_Lock_Date_Mobile__c)),
   Initial_Lock_Date_Mobile__c +(TODAY()-DATEVALUE(Initial_Lock_Date_Mobile__c)) + WEEKDAY(DATEVALUE(Initial_Lock_Date_Mobile__c))-WEEKDAY(TODAY()),
   IF(WEEKDAY(TODAY())=WEEKDAY(DATEVALUE(Initial_Lock_Date_Mobile__c)),
      Initial_Lock_Date_Mobile__c +(TODAY()-DATEVALUE(Initial_Lock_Date_Mobile__c)),
         Initial_Lock_Date_Mobile__c +(TODAY()-DATEVALUE(Initial_Lock_Date_Mobile__c)) + WEEKDAY(DATEVALUE(Initial_Lock_Date_Mobile__c))-WEEKDAY(TODAY())
   )	  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock Time Mobile</label>
    <type>DateTime</type>
</CustomField>