force-app/main/default/objects/ServiceTerritory/fields/Lock_Time_Override__c.field-meta.xml
<CustomField>
    <fullName>Lock_Time_Override__c</fullName>
    <description>Use to override that week&apos;s lock time. Will affect what ever week the selected date is in.</description>
    <inlineHelpText>Update this date/time to override the weekly lock time. This will only apply for the week that the data resides in.</inlineHelpText>
    <label>Lock Time Override</label>
    <type>DateTime</type>
</CustomField>