force-app/main/default/objects/ServiceTerritory/fields/Safety_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Safety_Manager_Email__c</fullName>
    <formula>Safety_Manager_SFS_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Manager Email</label>
    <type>Text</type>
</CustomField>