force-app/main/default/objects/ServiceTerritory/fields/Safety_Manager_SFS_User__c.field-meta.xml
<CustomField>
    <fullName>Safety_Manager_SFS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safety Manager SFS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>