force-app/main/default/objects/ServiceTerritory/listViews/Top_Level_Territories_Active.listView-meta.xml
<ListView>
    <fullName>Top_Level_Territories_Active</fullName>
    <columns>Name</columns>
    <columns>IsActive</columns>
    <columns>OperatingHours</columns>
    <columns>Description</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>FSL__TerritoryLevel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Top Level Territories (Active)</label>
</ListView>